css/main.css
hr.gn-main {
    background-color: #00d1b2;
    border: none;
    display: block;
    height: 1px;
    margin: 1.5rem 0;
  }

  hr.gn-section {
    background-color: #00d1b2;
    border: none;
    display: block;
    height: 1px;
    margin: 1.5rem 0;
  }

  .is-wisdom{
    color: #ffe08a !important;
  }


  xmp.code-border {border-style: dotted;}

  .has-text-link-dark {
    color: #1D9BF0 !important;
  }
  
  .content blockquote {
    background-color: grey;
    border-left: 5px solid #dbdbdb;
    color : whitesmoke;
    padding: 1.25em 1.5em;
  }
  
  section.banner {
    height : 90px;
    width : 728px;
  }
  
  a {
    color: #1D9BF0 !important;
    cursor: pointer;
    text-decoration: none;
  }

  .card-header-title-light {
    color: whitesmoke;
  }

  .card-header-title-dark {
    color: grey;
  }
  
  /* Floating Button */
  .back-to-top {
    position: fixed;
    bottom: 20px;
    right: 20px;
    background: #3273dc; /* Bulma primary color */
    color: white;
    border: none;
    padding: 10px 15px;
    border-radius: 50%;
    font-size: 24px;
    cursor: pointer;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
    display: none; /* Hidden by default */
    transition: opacity 0.3s, transform 0.3s;
  }

    /* Hover Effect */
  .back-to-top:hover {
      background: #205bac;
  }

      /* Show when scrolled down */
  .show-button {
    display: block;
    opacity: 1;
    transform: translateY(0);
  }

